fixed support of model file path with spaces and added/fixed support for MD 11.6